--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -1,25 +1,38 @@
+<% thisClient = Client.find(@invoice.clientid) %>
+<% thisProject = Project.find(@invoice.projectid) %>
+
+<header>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<%= wicked_pdf_image_tag company_logo_url %>
+				<% if !thisClient.logo.blank? %>
+				<div class="pull-right"><%= wicked_pdf_image_tag thisClient.logo.url(:medium) %></div>
+				<% end %>
+			</div>
+		</div>
+	</div>
+</header>
+
 <section id="invoice-show">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<% thisClient = Client.find(@invoice.clientid) %>
-				<% thisProject = Project.find(@invoice.projectid) %>
-				<div>
-					<% if !thisClient.logo.blank? %>
-					<div class="pull-right"><%= wicked_pdf_image_tag thisClient.logo.url(:thumb) %></div>
-					<% end %>
-					<h1>Invoice</h1>
-				</div>
-				<div class="clearfix"></div>
-				<p class="text-right"><%= @invoice.date.to_formatted_s(:long) %></p>
 				<div>
 					<div class="pull-right text-right">
 						<p>Attention: <%= thisClient.contact %></p>
 						<p><%= thisClient.name %></p>
 					</div>
+					<h1>Invoice</h1>
+					<p><%= @invoice.date.to_formatted_s(:long) %></p>
+				</div>
+				<div class="clearfix"></div>
+				<p class="text-right"></p>
+				<div>
 					<p><%= company_email %></p>
 					<p><%= company_phone %></p>
 				</div>
+				<hr>
 				<p><strong>Project:</strong> <%= thisProject.name %></p>
 				<p><strong>Description:</strong></p>
 				<p><%= @invoice.description %></p>
@@ -47,6 +60,37 @@
 					<%= @invoice.paymenttype %>
 				</p>
 				<% end %>
+				<table class="table table-condensed">
+	        <thead>
+	          <tr>
+	            <th>#</th>
+	            <th>Description</th>
+	            <th class="text-center">Hours</th>
+	            <th class="text-center">Rate / Hour ($)</th>
+	            <th class="text-center">Cost</th>
+	          </tr>
+	        </thead>
+	        <tbody>
+	          <tr>
+	            <td>1</td>
+	            <td>Initial Work</td>
+	            <td class="text-center">1</td>
+	            <td class="text-center">40</td></td>
+	            <td><div class="pull-right">40</div>$</td>
+	          </tr>
+	          <tr>
+	            <td>2</td>
+	            <td>Hourly Work</td>
+	            <td class="text-center">2</td>
+	            <td class="text-center">25</td>
+	            <td><div class="pull-right">50</div>$</td>
+	          </tr>
+	          <tr>
+	            <td class="text-right" colspan="4"><strong>Total</strong>&nbsp;&nbsp;</td>
+	            <td><strong><div class="pull-right">90</div>$</strong></td>
+	          </tr>
+	        </tbody>
+	      </table>
 			</div>
 		</div>
 	</div>
