--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -17,6 +17,16 @@
 	  	letter-spacing: 0px;
   	}
   	
+  	header img {
+	  	max-width: 200px;
+	  	max-height: 80px;
+  	}
+  	
+  	footer .container {
+  		padding: 0px;
+	  	border: 0px;
+  	}
+  	
   	footer img {
 	  	width: 12%;
   	}
@@ -24,7 +34,7 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="pdf-view">
 
 <%= yield %>
 
@@ -32,6 +42,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
+				<hr>
 				<p>&copy; <%= company_full_name %></p>
 				<%= wicked_pdf_image_tag company_logo_url %>
 			</div>
