--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -59,7 +59,7 @@
 		      	<% @invoice.lines.each do |line| %>
 			      <tr>
 						  <td><%= line.description %></td>
-						  <% if line.hourly == true %>
+						  <% if @invoice.worktype == 'Hourly' %>
 						  <td class="text-center"><%= line.hours %></td>
 						  <td class="text-center"><%= number_with_precision(line.rate, :precision => 2) %></td>
 						  <% else %>
