--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -19,7 +19,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<% @projects.sort { |a,b| a.name <=> b.name }.each do |project| %>
+								<% @projects.sort { |b,a| a.startdate <=> b.startdate }.each do |project| %>
 								<tr id="projectrow<%= project.id %>">
 									<td><%= link_to Client.find(project.clientid) do %><%= Client.find(project.clientid).name %><% end %></td>
 									<td><%= link_to project do %><%= project.name %><% end %></td>
