--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -38,9 +38,11 @@ footer #footer-logo {
 	max-width: 100px;
 }
 
-canvas.chart {
-	display: block;
+#monthlyRevenueChart {
 	width: 100%;
-	height: 100px;
-	margin: 1em auto 0px;
+	min-height: 300px;
+}
+
+.chart a.canvasjs-chart-credit {
+	display: none !important;
 }
