--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title><%= company_abbrv_name %> Biz Admin</title>
+  
+  <!-- Fav and touch icons -->
+  <link rel="apple-touch-icon-precomposed" href="<%= company_favicon_url %>">
+  <link rel="shortcut icon" href="<%= company_favicon_url %>">
+  
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
