--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,27 +10,45 @@
 				<% else %>
 				<div class="row">
 					<div class="col-sm-6">
+						<h2>In-Progress</h2>
 						<table class="table table-condensed">
 							<thead>
 								<tr>
 									<th>Client</th>
 									<th>Project</th>
-									<th class="text-center">Completed?</th>
 								</tr>
 							</thead>
 							<tbody>
-								<% @projects.sort { |b,a| a.startdate <=> b.startdate }.each do |project| %>
+								<% @projects.where(:completed => false).sort { |b,a| a.startdate <=> b.startdate }.each do |project| %>
 								<tr id="projectrow<%= project.id %>">
 									<td><%= link_to Client.find(project.clientid) do %><%= Client.find(project.clientid).name %><% end %></td>
 									<td><%= link_to project do %><%= project.name %><% end %></td>
-									<td class="text-center"><% if project.completed == true %><i class="fa fa-check green"></i><% else %><span class="spread red">No</span><% end %></td>
 								</tr>
 								<% end %>
 							</tbody>
 						</table>
-						<% end %>
+					</div>
+					<div class="col-sm-6">
+						<h2>Completed</h2>
+						<table class="table table-condensed">
+							<thead>
+								<tr>
+									<th>Client</th>
+									<th>Project</th>
+								</tr>
+							</thead>
+							<tbody>
+								<% @projects.where(:completed => true).sort { |b,a| a.startdate <=> b.startdate }.each do |project| %>
+								<tr id="projectrow<%= project.id %>">
+									<td><%= link_to Client.find(project.clientid) do %><%= Client.find(project.clientid).name %><% end %></td>
+									<td><%= link_to project do %><%= project.name %><% end %></td>
+								</tr>
+								<% end %>
+							</tbody>
+						</table>
 					</div>
 				</div>
+				<% end %>
 			</div>
 		</div>
 	</div>
