--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,5 +15,8 @@
 				</div>
 			</div>
 		</div>
+		<hr>
+		<% @today = Date.today %>
+		<%= render 'layouts/financialdash' %>
 	</div>
 </section>
